Enalbe configuration override