@@ -224,10 +224,11 @@
   <profiles>
     <profile>
       <!-- testing-postgresql-server only supports x86-64 -->
-      <id>64bit-tests</id>
+      <id>64bit-intel-tests</id>
       <activation>
         <os>
-         <arch>x86_64</arch>
+          <name>x86_64</name>
+          <arch>x86_64</arch>
         </os>
       </activation>
       <build>
@@ -235,7 +236,31 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
+            <configuration combine.self="override">
+              <systemProperties>
+                <tajo.test>TRUE</tajo.test>
+              </systemProperties>
+              <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!-- testing-postgresql-server only supports x86-64 -->
+      <id>64bit-amd-tests</id>
+      <activation>
+        <os>
+          <name>amd64</name>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration combine.self="override">
               <systemProperties>
                 <tajo.test>TRUE</tajo.test>
               </systemProperties>
